SFDCProject/src/objects/Partner_Role__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Execution_Date__c</fullName>
        <label>Contract Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CorporatePartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Roles (Corporate Partner)</relationshipLabel>
        <relationshipName>Partner_Roles7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Assignment__c</fullName>
        <label>Market Assignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Partner Roles</relationshipLabel>
        <relationshipName>Partner_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Roles (Partner Name)</relationshipLabel>
        <relationshipName>Partner_Roles3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Site__c</fullName>
        <formula>Partner_Name__r.Site</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_adder__c</fullName>
        <label>Performance Adder</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Division__c</fullName>
        <label>Sales Rep Division</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email_2__c</fullName>
        <formula>SalesRep__r.Email</formula>
        <label>Sales Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <label>Sales Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Phone_2__c</fullName>
        <formula>SalesRep__r.Phone</formula>
        <label>Sales Rep Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Phone__c</fullName>
        <label>Sales Rep Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sunrun_fee_adder__c</fullName>
        <label>Sunrun Fee Adder</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_adders__c</fullName>
        <formula>Performance_adder__c + Sunrun_fee_adder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total of Adders</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Partner Role</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Partner Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>